--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(UT_SRCS seatest/seatest.c
             unittest.c
             ut_context.c
             ut_graph.c
+            ut_image.c
             ut_logging.c
             ut_reference.c) 
 
